# restaurant-data-collector

./: .gitignore  README.md  load_to_postgres.py  pyproject.toml  requirements.txt  restaurants_20241115.json  setup.sh  yelp_api.py
collector/: db_loader.py  test_connection.py  yelp_api.py  yelp_collector.py
collector/spiders/: nyc_restaurants.py
