[tool.poetry]
name = "restaurant-data-collector"
version = "0.1.0"
description = "Collects restaurant data from Yelp API"
authors = ["Felix Auvray-Stiritz <felix.auvray.stiritz@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11" 
python-dotenv = "^1.0.0"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"